--- a/Desktop/Daily-MERN-Stack-Practice/day01.html
+++ b/Desktop/Daily-MERN-Stack-Practice/day01.html
@@ -1,31 +1,11 @@
-<!-- Simple Hello World Print -->
- 
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>day 19 of MERN STACK COURSE</title>
-  <style>
-    .container{
-      background-color: aqua;
-      border: 5px solid red;
-      height: 200px;
-      width: 200px;
-    }
-    .chaild{
-      background-color: aqua;
-      border: 5px solid red;
-      height: 200px;
-      width: 200px;
-    }
-  </style>
+  <title>Day 1</title>
 </head>
 <body>
-  <div class="container">
-    <div class="chaild">
-    hello world
-    </div>
-  </div>
+  <h1>Day 1</h1>
 </body>
 </html>
