--- a/day05(blog website)/blog.html
+++ b/day05(blog website)/blog.html
@@ -14,6 +14,8 @@
 ✨ We bring you the latest designs with unmatched variety for every occasion.</p>
     </header>
     <main class="main-container">
+
+
       <!-- start 1 cart -->
          <div class="card-container">
           <a href="#" class="card-img-container">
@@ -26,7 +28,7 @@
 
              <div class="card-title-container">
               <a href="#" class="card-title-anchor">
-                <h2 class="card-title">Python Developer</h2>
+                <h2 class="card-title">DEOps Developer</h2>
               </a>
               <p class="card-description">fast visit and join this class</p>
              </div>
@@ -54,10 +56,55 @@
          </div>
       <!-- End 1 cart -->
 
+
+
+
           <!-- start 1 cart -->
          <div class="card-container">
           <a href="#" class="card-img-container">
             <img src="douglas-lopes-ehyV_XOZ4iA-unsplash.jpg" 
+             alt="card 1 image"
+             class="card-image"
+             loading="lazy"
+             />
+              </a>
+
+             <div class="card-title-container">
+              <a href="#" class="card-title-anchor">
+                <h2 class="card-title">React Developer</h2>
+              </a>
+              <p class="card-description">fast visit and join this class</p>
+             </div>
+               <div class="card-footer-container">
+                <div class="author-container">
+                    <div class="author-avatar-container">
+                      <img src="image.png" 
+                      alt="avatar 1"
+                      class="author-avatar"
+                      />
+                    </div>
+                    <div class="author-info-container">
+                      <span class="name">
+                         ganesh more
+                      </span>
+                      <span class="date">
+                         Dec 31 2025
+                      </span>
+                    </div>
+                </div>
+                <div class="card-tag-container">
+                   <span>Technology</span>
+                </div>
+               </div>
+         </div>
+      <!-- End 1 cart -->
+
+
+
+          <!-- start 1 cart -->
+         <div class="card-container">
+          <a href="#" class="card-img-container">
+            <img src="rubaitul-azad-FPK6K5OUFVA-unsplash (1).jpg" 
              alt="card 1 image"
              class="card-image"
              loading="lazy"
@@ -94,6 +141,8 @@
          </div>
       <!-- End 1 cart -->
 
+
+
           <!-- start 1 cart -->
          <div class="card-container">
           <a href="#" class="card-img-container">
@@ -106,7 +155,7 @@
 
              <div class="card-title-container">
               <a href="#" class="card-title-anchor">
-                <h2 class="card-title">Python Developer</h2>
+                <h2 class="card-title">Backend Developer</h2>
               </a>
               <p class="card-description">fast visit and join this class</p>
              </div>
@@ -134,6 +183,8 @@
          </div>
       <!-- End 1 cart -->
 
+
+
           <!-- start 1 cart -->
          <div class="card-container">
           <a href="#" class="card-img-container">
@@ -146,7 +197,7 @@
 
              <div class="card-title-container">
               <a href="#" class="card-title-anchor">
-                <h2 class="card-title">Python Developer</h2>
+                <h2 class="card-title">Fronted Developer</h2>
               </a>
               <p class="card-description">fast visit and join this class</p>
              </div>
@@ -174,6 +225,8 @@
          </div>
       <!-- End 1 cart -->
 
+
+
           <!-- start 1 cart -->
          <div class="card-container">
           <a href="#" class="card-img-container">
@@ -186,7 +239,7 @@
 
              <div class="card-title-container">
               <a href="#" class="card-title-anchor">
-                <h2 class="card-title">Python Developer</h2>
+                <h2 class="card-title">C++ Developer</h2>
               </a>
               <p class="card-description">fast visit and join this class</p>
              </div>
@@ -214,6 +267,8 @@
          </div>
       <!-- End 1 cart -->
 
+
+
           <!-- start 1 cart -->
          <div class="card-container">
           <a href="#" class="card-img-container">
@@ -226,7 +281,7 @@
 
              <div class="card-title-container">
               <a href="#" class="card-title-anchor">
-                <h2 class="card-title">Python Developer</h2>
+                <h2 class="card-title">Fullstack Developer</h2>
               </a>
               <p class="card-description">fast visit and join this class</p>
              </div>
@@ -254,45 +309,7 @@
          </div>
       <!-- End 1 cart -->
 
-          <!-- start 1 cart -->
-         <div class="card-container">
-          <a href="#" class="card-img-container">
-            <img src="douglas-lopes-ehyV_XOZ4iA-unsplash.jpg" 
-             alt="card 1 image"
-             class="card-image"
-             loading="lazy"
-             />
-              </a>
 
-             <div class="card-title-container">
-              <a href="#" class="card-title-anchor">
-                <h2 class="card-title">Python Developer</h2>
-              </a>
-              <p class="card-description">fast visit and join this class</p>
-             </div>
-               <div class="card-footer-container">
-                <div class="author-container">
-                    <div class="author-avatar-container">
-                      <img src="image.png" 
-                      alt="avatar 1"
-                      class="author-avatar"
-                      />
-                    </div>
-                    <div class="author-info-container">
-                      <span class="name">
-                         ganesh more
-                      </span>
-                      <span class="date">
-                         Dec 31 2025
-                      </span>
-                    </div>
-                </div>
-                <div class="card-tag-container">
-                   <span>Technology</span>
-                </div>
-               </div>
-         </div>
-      <!-- End 1 cart -->
 
        <!-- start 1 cart -->
          <div class="card-container">
@@ -306,7 +323,7 @@
 
              <div class="card-title-container">
               <a href="#" class="card-title-anchor">
-                <h2 class="card-title">Python Developer</h2>
+                <h2 class="card-title">SQl Developer</h2>
               </a>
               <p class="card-description">fast visit and join this class</p>
              </div>
